Add dataset slides and HW01 template

--- a/Homework/HW02.Rmd
+++ b/Homework/HW02.Rmd
@@ -168,3 +168,8 @@ d. ERASE AND TYPE YOUR ANSWER HERE
 
 e. ERASE AND TYPE YOUR ANSWER HERE
 
+# Session Information
+
+```{r echo = FALSE}
+sessionInfo()
+```
