--- a/Homework/HW01.Rmd
+++ b/Homework/HW01.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "STT 5811 HW01 Data and Study Design"
 subtitle: "PUT YOUR NAME HERE"
-date: 'Last updated `r format(Sys.time(), "%a, %b %d, %Y @ %I:%M %p")`'
+date: "`r format(Sys.time(), '%A, %B %d, %Y @ %I:%M %p')`"
 output:
   pdf_document:
     toc: true
