--- a/Slides/SamplingStudies.Rmd
+++ b/Slides/SamplingStudies.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Samples & Study Design"
 subtitle: "STT 5811 Statistical Concepts and Applications"
-author: "Author: Jill E. Thomley | Appalachian State University"
+author: "Jill E. Thomley | Appalachian State University"
 date: "`r format(Sys.time(), '%B %d, %Y @ %I:%M %p')`"
 output: 
   ioslides_presentation:
