Tweak wording, fix question on HW02

--- a/Homework/HW02.Rmd
+++ b/Homework/HW02.Rmd
@@ -26,6 +26,8 @@ d. ERASE AND TYPE YOUR ANSWER HERE
 
 e. ERASE AND TYPE YOUR ANSWER HERE
 
+f. ERASE AND TYPE YOUR ANSWER HERE
+
 ## Exercise 4
 
 a. ERASE AND TYPE YOUR ANSWER HERE
